# genlink

./: LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy.prod.yml
apps/api/: .dockerignore  .gitignore  Dockerfile  README.md  dockerfile  pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: __init__.py  config.py  db.py  deps.py  logger.py  security.py
apps/api/app/lib/: datetime.py  exceptions.py
apps/api/app/models/: auth.py  response.py  user.py
apps/api/app/routes/: __init__.py  auth.py  deps.py
apps/api/app/services/: auth.py  base.py  email.py  user.py
apps/api/app/templates/: password_reset.html  welcome.html
apps/web/: .dockerignore  .gitignore  README.md  dockerfile  package.json
apps/web/app/: app.css  root.tsx  routes.ts  sessions.server.tsx
apps/web/app/components/common/: Background.tsx
apps/web/app/components/features/auth/: auth-form.tsx
apps/web/app/components/features/landing/: about.tsx  footer.tsx  header.tsx  hero.tsx  pricing.tsx
apps/web/app/components/ui/: button.tsx  sonner.tsx
apps/web/app/constants/: strings.ts
apps/web/app/lib/: utils.ts
apps/web/app/routes/: index.tsx
apps/web/app/routes/auth/: layout.tsx  sign-in.tsx  sign-up.tsx
scripts/: dev.sh  prod.sh
