[tool.poetry]
name = "genlink-api"
version = "0.1.0"
description = ""
authors = ["syedtazyeen <themesyed@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.2,<0.35.0"
pydantic = {extras = ["email"], version = "^2.11.4"}
pydantic-settings = "^2.9.1"
pymongo = "^4.12.1"
motor = "^3.7.0"
passlib = "^1.7.4"
python-jose = "^3.4.0"
jose = "^1.0.0"
bcrypt = "^4.3.0"
pytz = "^2025.2"
httpx = "^0.28.1"
python-multipart = "^0.0.20"
authlib = "^1.5.2"
aiosmtplib = "^4.0.1"
jinja2 = "^3.1.6"
pytest = "^8.3.5"
faker = "^37.1.0"
requests = "^2.32.3"
pytest-dotenv = "^0.5.2"
pytest-asyncio = "^0.26.0"
orjson = "^3.10.18"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"